# AmbientOcclusion

./: CMakeLists.txt  README.md  main.cpp
cmake/: target-link-libraries-linux.cmake
include/: base.h  camera.h  light.h  object.h  occlusion_tree.h  renderer.h  shader.h  surface_element.h
shaders/: ambient_occlusion.comp  high_quality_ambient_occlusion.comp  scene_shader.frag  scene_shader.vert  shadow_volume.geom  shadow_volume.vert
shaders/dynamic/: ambient_occlusion.comp  ambient_occlusion.frag
shaders/high-quality/: ambient_occlusion.comp  ambient_occlusion.frag  ambient_occlusion.vert
source/: camera.cpp  light.cpp  object.cpp  occlusion_tree.cpp  renderer.cpp  shader.cpp  surface_element.cpp
